src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dhP0.5-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    default-window-height { proportion 0.5; }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1256 × 696, bounds: 800 × 600, states: []

post-map configures:
size: 1256 × 696, bounds: 800 × 600, states: []
size: 1256 × 696, bounds: 1256 × 696, states: [Activated]
